
[package]
authors = ["JCat <to@jocat.ru>"]
edition = "2021"
name    = "webview"
version = "0.3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0"
napi-derive = "3.0.0"
tao         = "0.34.2"
wry         = "0.53.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
